--- a/leanrSpringBoot/src/main/resources/application.properties
+++ b/leanrSpringBoot/src/main/resources/application.properties
@@ -1,2 +1,19 @@
+# Application name
 #spring.application.name=leanrSpringBoot
-management.endpoints.web.exposure.include =*
+
+# Management endpoints
+management.endpoints.web.exposure.include=*
+
+# H2 Database configuration
+#spring.datasource.url=jdbc:h2:mem:testdb
+# telling spring boot that pls delay execution of data.sql until  JPA provider (Hibernate) has created the schema.
+spring.jpa.defer-datasource-initialization=true
+
+#configuration to connect with mysql database
+# it means if db or schema is not there then jpa will create automatically
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3307/courses?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=321654
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#courses-user@localhost:3307
